erDiagram
    %% Enumerations (conceptual):
    %% - tournaments.source: MTGO | Melee | Other
    %% - deck_cards.board: MAIN | SIDE
    %% - matches.result: WIN | LOSS | DRAW

    formats {
        int id PK
        citext name
    }

    meta_changes {
        int id PK
        int format_id FK 
        timestamptz date 
        text change_type 
        text description
        citext card_name
        text set_code
    }

    players {
        int id PK
        citext handle 
        citext normalized_handle 
    }

    cards {
        int id PK
        citext name 
        uuid scryfall_oracle_id
    }

    archetypes {
        int id PK
        citext name 
        text color
        citext companion
    }

    tournaments {
        int id PK
        citext name 
        timestamptz date 
        int format_id FK 
        text source 
        text link
    }

    tournament_entries {
        int id PK
        int tournament_id FK 
        int player_id FK 
        int archetype_id FK 
        int wins 
        int losses 
        int draws 
        text decklist_url
        %% UNIQUE (tournament_id, player_id)
    }

    deck_cards {
        int id PK
        int entry_id FK 
        int card_id FK 
        int count 
        text board 
        %% board: MAIN | SIDE
        %% UNIQUE (entry_id, card_id, board)
    }

    matches {
        int id PK
        int entry_id FK 
        int opponent_entry_id FK 
        text result 
        %% result: WIN | LOSS | DRAW (from entry_id's perspective)
        boolean mirror 
        %% mirror: true if same-archetype pairing
        %% To avoid double-counting in queries, aggregate by
        %% (stage, round_no, LEAST(entry_id, opponent_entry_id), GREATEST(...))
    }

    %% Relationships
    formats ||--o{ tournaments : "format_id"
    formats ||--o{ meta_changes : "format_id"
    tournaments ||--o{ tournament_entries : "tournament_id"
    players ||--o{ tournament_entries : "player_id"
    archetypes ||--o{ tournament_entries : "archetype_id"
    tournament_entries ||--o{ deck_cards : "entry_id"
    cards ||--o{ deck_cards : "card_id"
    tournament_entries ||--o{ matches : "entry_id"
    tournament_entries ||--o{ matches : "opponent_entry_id"
